@startuml Gerenciador de Eventos do Sistema

class MaquinaDeEventos {
  - eventos: Evento[]
  - instanteDeSimulacao: number
  + processarEventos(): Evento | void
  + adicionarEvento(NovoEvento: Evento): void
  - atualizarInstanteDeSimulacao(novoInstanteDeSimulacao: number): void
}

class Evento {
  - timeStamp: number
  - refeitorio: Refeitorio
  - maquinaEventos: MaquinaDeEventos
  + getTimeStamp(): number
  + processarEvento(): void
}

class ChegadaAlunoFilaExterna {
  - aluno: Aluno
  + processarEvento(): void
}

class BloquearCatraca {
  + processarEvento(): void
}

class PassarAlunoParaCatraca {
  - aluno: Aluno
  + processarEvento(): void
}

class BloquearAtendimento {
  + processarEvento(): void
}

class DesbloquearAtendimento {
  + processarEvento(): void
}

class ChegadaAlunoAtendimento {
  - aluno: Aluno
  + processarEvento(): void
}

class FinalizarAtendimentoAluno {
  - aluno: Aluno
  + processarEvento(): void
}

class DesbloquearCatraca {
  + processarEvento(): void
}

class PassarAlunoParaFilaInterna {
  - aluno: Aluno
  + processarEvento(): void
}

class PassarAlunoMesa {
  - aluno: Aluno
  + processarEvento(): void
}

class SairDoRefeitorio {
  - aluno: Aluno
  + processarEvento(): void
}

Evento <|-- BloquearAtendimento
Evento <|-- BloquearCatraca
Evento <|-- ChegadaAlunoAtendimento
Evento <|-- ChegadaAlunoFilaExterna
Evento <|-- DesbloquearAtendimento
Evento <|-- DesbloquearCatraca
Evento <|-- FinalizarAtendimentoAluno
Evento <|-- PassarAlunoMesa
Evento <|-- PassarAlunoParaCatraca
Evento <|-- PassarAlunoParaFilaInterna
Evento <|-- SairDoRefeitorio

MaquinaDeEventos "1" o-- "n" Evento
Evento "1" *-- "1" MaquinaDeEventos

@enduml